Java 21 modernization: replace deprecated APIs and clean up
- Replace all deprecated new Integer() calls with Integer.valueOf() across 8 test files
- Fix Checkstyle import ordering violation in SegmentIteratorTest.java
- Remove unused spring.version property from pom.xml
- All 412 tests passing, BUILD SUCCESS

Co-Authored-By: rmillard07 <rmillard07@gmail.com>