@@ -659,7 +659,7 @@ public class GenericParserTest {
         assertEquals(">", isa.getElementSeparator());
 
         // Groups
-        assertEquals(new Integer(1), isa.getNumberOfGroups());
+        assertEquals(Integer.valueOf(1), isa.getNumberOfGroups());
         assertEquals("000003438", isa.getTrailerInterchangeControlNumber());
 
         List<X12Group> groups = x12Doc.getGroups();
